--- a/CS1.Rmd
+++ b/CS1.Rmd
@@ -1,7 +1,9 @@
 ---
 output:
+  github_document:
+    toc: true
+    toc_depth: 2
   html_document: default
-  pdf_document: default
 ---
 #Case Study One   
 ###By: Michael Crowder, Nadya Green & Jonathan Knowels  
